# bazel-rules-typescript-data-repro

./: .gitignore  BUILD.bazel  package-lock.json  package.json
src/: test_spec.js  ts_spec.ts
